fix header overflow when using navigator in 3d enabled browsers Case: SVY-4409

--- a/servoy_mobile/src/com/servoy/mobile/public/servoy.css
+++ b/servoy_mobile/src/com/servoy/mobile/public/servoy.css
@@ -78,6 +78,10 @@ label.label-labelfor
 	right: 0;
 }
 
+.ui-panel-animate.ui-panel-content-fixed-toolbar-position-left.ui-panel-content-fixed-toolbar-display-push.ui-panel-content-fixed-toolbar-open {
+	right : 17em;	
+}
+
 .ui-panel-content-wrap-position-left.ui-panel-content-wrap-display-push.ui-panel-content-wrap-open {
 	margin-right: 17em;
 }
